Removed glyphicon reference

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -32,12 +32,8 @@
 		<div id="boardPanel">
 			<div id="playMode">
 				<h1>How would you like to play?</h1>
-				<a id="chooseOne">
-					<span class="glyphicon glyphicon-user"></span>One Player
-				</a>
-				<a id="chooseTwo">
-					<span class="glyphicon glyphicon-user"></span>Two Player
-				</a>
+				<a id="chooseOne">One Player</a>
+				<a id="chooseTwo">Two Player</a>
 			</div>
 
 			<div id="symbolChoice">
