--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -1,68 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="public/css/style.css" />
+    <title>Tic Tac Toe</title>
+  </head>
+  <body>
+    <div id="boardFrame">
+      <div id="scoreBoard">
+        <div class="score-holder">
+          <div class="display-item">
+            <span id="playerOneName">Player 1:</span>
+            <span id="firstScore">0</span>
+          </div>
+          <div class="display-item">|</div>
+          <div class="display-item">
+            <span id="secondPlayerName">Computer:</span>
+            <span id="secondScore">0</span>
+          </div>
+          <div class="display-item">
+            <a id="reset">Reset All</a>
+          </div>
+        </div>
+      </div>
 
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" href="public/css/style.css">
-	<title>Tic Tac Toe</title>
-</head>
+      <div id="boardPanel">
+        <div id="playMode">
+          <h1>How would you like to play?</h1>
+          <a id="chooseOne">
+            <span class="glyphicon glyphicon-user"></span>One Player
+          </a>
+          <a id="chooseTwo">
+            <span class="glyphicon glyphicon-user"></span>Two Player
+          </a>
+        </div>
 
-<body>
-	<div id="boardFrame">
-		<div id="scoreBoard">
-			<div class="score-holder">
-				<div class="display-item">
-					<span id="playerOneName">Player 1:</span>
-					<span id="firstScore">0</span>
-				</div>
-				<div class="display-item">|</div>
-				<div class="display-item">
-					<span id="secondPlayerName">Computer:</span>
-					<span id="secondScore">0</span>
-				</div>
-				<div class="display-item">
-					<a id="reset">Reset All</a>
-				</div>
-			</div>
-		</div>
+        <div id="symbolChoice">
+          <h1>Which do you prefer: X or O?</h1>
+          <a id="chooseX">X</a>
+          <a id="chooseO">0</a>
+          <a id="backToBasic"> <i class="fa fa-arrow-left"></i> Back </a>
+        </div>
 
+        <div id="gameGrid">
+          <div class="game-box" id="1"></div>
+          <div class="game-box middle-col" id="2"></div>
+          <div class="game-box" id="3"></div>
+          <div class="game-box middle-row" id="4"></div>
+          <div class="game-box middle-col middle-row" id="5"></div>
+          <div class="game-box middle-row" id="6"></div>
+          <div class="game-box" id="7"></div>
+          <div class="game-box middle-col" id="8"></div>
+          <div class="game-box" id="9"></div>
+        </div>
 
-		<div id="boardPanel">
-			<div id="playMode">
-				<h1>How would you like to play?</h1>
-				<a id="chooseOne">One Player</a>
-				<a id="chooseTwo">Two Player</a>
-			</div>
+        <div class="dialog-box">
+          <span class="text"></span><br />
+          <a id="playAgain">Continue</a>
+        </div>
+      </div>
+    </div>
 
-			<div id="symbolChoice">
-				<h1>Which do you prefer: X or O?</h1>
-				<a id="chooseX">X</a>
-				<a id="chooseO">0</a>
-				<a id="backToBasic">
-					<i class="fa fa-arrow-left"></i> Back
-				</a>
-			</div>
-
-			<div id="gameGrid">
-				<div class="game-box" id="1"></div>
-				<div class="game-box middle-col" id="2"></div>
-				<div class="game-box" id="3"></div>
-				<div class="game-box middle-row" id="4"></div>
-				<div class="game-box middle-col middle-row" id="5"></div>
-				<div class="game-box middle-row" id="6"></div>
-				<div class="game-box" id="7"></div>
-				<div class="game-box middle-col" id="8"></div>
-				<div class="game-box" id="9"></div>
-			</div>
-			<div class="dialog-box"></div>
-		</div>
-	</div>
-
-
-
-	<script src="public/javascript/script.js"></script>
-</body>
-
+    <!-- <script src="public/js/model.js"></script>
+    <script src="public/js/view.js"></script>
+    <script src="public/js/controller.js"></script> -->
+    <script src="public/js/script.js" type="module"></script>
+  </body>
 </html>
